# ZBstorage

./: README.md  docker-compose.yml  prometheus.yml  storage_node_tmp.json  简历.md
demo/: CMakeLists.txt  zb_system_test.cpp
src/: CMakeLists.txt
src/client/fuse/: CMakeLists.txt  zb_fuse_main.cpp
src/client/mount/: DfsClient.cpp  DfsClient.h  MountConfig.h  RpcClients.cpp  RpcClients.h
src/common/: LogRedirect.h  StatusUtils.cpp  StatusUtils.h
src/mds/collector/: collector.h
src/mds/inode/: InodeStorage.cpp  InodeTimestamp.h  inode.cpp  inode.h
src/mds/server/: Server.cpp
src/msg/RPC/: CMakeLists.txt  readme.md
src/msg/RPC/client/: VFS_dist.cpp
src/msg/RPC/proto/: common.pb.cc  common.pb.h  mds.proto  rpc_common.proto  storage.proto
src/msg/RPC/server/: mds_server.cpp  mds_server.h  mds_service_impl.cpp  storage_server.cpp  storage_server.h  storage_service_impl.cpp  vfs_server.cpp  vfs_server.h  vfs_service_impl.cpp
src/msg/proto/: CMakeLists.txt  cluster_manager.proto  storage_node.proto
src/srm/: CMakeLists.txt  ClusterManagerServiceImpl.cpp  ClusterManagerServiceImpl.h  NodeRegistry.cpp  NodeRegistry.h  StorageNodeManager.cpp  StorageNodeManager.h  main.cpp
src/srm/gateway/: GatewayServiceImpl.cpp  GatewayServiceImpl.h  RequestDispatcher.cpp  RequestDispatcher.h
src/srm/simulation/: SimulationConfig.h  VirtualNodeEngine.cpp  VirtualNodeEngine.h
src/srm/virtual/: InodeBatchMonitor.cpp  InodeBatchMonitor.h  VirtualNodeController.cpp  VirtualNodeController.h  VirtualNodeLedger.cpp  VirtualNodeLedger.h
src/storagenode/: CMakeLists.txt
src/storagenode/real_node/: CMakeLists.txt
src/storagenode/real_node/agent/: NodeAgent.cpp  NodeAgent.h
src/storagenode/real_node/io/: DiskManager.cpp  DiskManager.h  IOEngine.cpp  IOEngine.h
src/storagenode/real_node/meta/: LocalMetadataManager.cpp  LocalMetadataManager.h
src/storagenode/real_node/server/: StorageServiceImpl.cpp  StorageServiceImpl.h  real_node_server.cpp
src/storagenode/real_node/test/: real_node_client.cpp  real_node_stress_client.cpp
tests/: CMakeLists.txt  fs_bench.cpp  fs_verify.cpp  inode_batch_generator.cpp  inode_capacity_sim.cpp
tests/RPC/: CMakeLists.txt
tests/RPC/client/: VFS_dist.cpp  VFS_dist.h  vfs_main.cpp
tests/RPC/proto/: common.pb.cc  common.pb.h  common.proto  mds.pb.cc  mds.pb.h  mds.proto  storage.pb.cc  storage.pb.h  storage.proto  vfs.proto
tests/RPC/server/: mds_server.cpp  mds_service_impl.cpp  storage_server.cpp  storage_service_impl.cpp  vfs_service_impl.cpp
